# string-syntax

./: .gitignore  CHANGELOG.md  DEVELOPER.md  README.md  cabal.project  fourmolu.yaml  package.yaml  stack-ghc-9.2.yaml  stack-ghc-9.4.yaml  stack.yaml  string-syntax.cabal
.github/workflows/: ci.yml  pr-review-comment.yml  release.yml
examples/: string-syntax-example.cabal
examples/explicit/: Lib.hs  main.hs
examples/extensible-hasclass/: Lib.hs  main.hs
examples/extensible-th/: Lib.hs  main.hs
examples/implicit-builder/: Lib.hs  main.hs
examples/implicit-no-builder/: Lib.hs  main.hs
examples/implicit-only-string/: Lib.hs  main.hs
examples/shared/: SqlQuery.hs
exe/: Preprocessor.hs
src/Data/String/: Syntax.hs
src/Data/String/Syntax/: ExtensibleHasClass.hs  ExtensibleTH.hs  ImplicitBuilder.hs  ImplicitNoBuilder.hs  ImplicitOnlyString.hs  Interpolate.hs
src/Data/String/Syntax/Internal/: Parse.hs  PostProcess.hs
test/: InterpolateTests.hs  Main.hs  MultilineTests.hs
